--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <iframe src="interactive_plot.html" width="100%" height="500px" frameborder="0"></iframe>
         <div class="graph-content">
           <p class="graph-title">Lets Explore my Step Count</p>
-          <p class="graph-description">If you play around with this heatmap for some time you are going to recognise that the month of August has the darkest palette of blue with July and months like may and april having the lightest which just proves my point above.</p>
+          <p class="graph-description">If you play around with this heatmap for some time you are going to recognise that the month of August has the darkest palette of blue with July and months like may and april having the lightest which just proves my point above. Also the thing that is interesting is that the some months in the spring are lighter than some months in winter. Logically this does not make sense because spring are the times where the weather is the most optimal for being active physcially. </p>
         </div>
       </div>
 
@@ -176,7 +176,7 @@
         <img class="graph-image" src="./images/Ekran görüntüsü 2023-12-11 133135.png" alt="Graph Image">
         <div class="graph-content">
           <p class="graph-title">Lets Explore my Headphone Data by Month and Year</p>
-          <p class="graph-description">We couldn't get much of an result previously so lets try again with an different graph. This time the values peak during the spring time which would mean that during schooltime I use my headphones way more than I supposed for an healhty individual.</p>
+          <p class="graph-description">We couldn't get much of an result previously so lets try again with an different graph. This time the values peak during the spring time which would mean that during schooltime I use my headphones way more than I supposed for an healhty individual. But my null hypothesis is proved for my headphone data because we could not find an more convincing correlation betwwen them.</p>
         </div>
       </div>
 
@@ -193,7 +193,7 @@
         <img class="graph-image" src="./images/Ekran görüntüsü 2023-12-30 143123.png" alt="Graph Image">
         <div class="graph-content">
           <p class="graph-title">Analysis of Caloric Data</p>
-          <p class="graph-description">As we can see from the highest generally occur during summer and the frequency of lowest is highest during spring indicating that spring is time where my activeness is at its lowest.</p>
+          <p class="graph-description">As we can see from the highest generally occur during summer and the frequency of lowest is highest during spring indicating that spring is time where my activeness is at its lowest. We can also expect this result because of the way we analyzed our stepcount and we all know that step count highly corrrelated with calories burned. So, We can confirm our Null Hypothesis based on these visiualizations.</p>
         </div>
       </div>
 
